# fae-cpp

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CNAME  Changelog.md  Makefile  README.md  cmake_install.cmake  config.cpp.in  config.hpp.in  index.js  web_debug_build.sh  web_debug_config.sh  web_dev.sh
.github/workflows/: build-and-deploy.yml  cmake-single-platform.yml  emcmake-github-pages.yml  web-build-and-deploy.yml
assets/: default.wgsl  main.wgsl
cmake/: get_cpm.cmake  imgui.cmake
examples/: CMakeLists.txt
examples/example_application/: example_application.cpp
include/fae/: angle.hpp  application.hpp  asset_manager.hpp  camera.hpp  color.hpp  core.hpp  cursor.hpp  default_plugins.hpp  duration.hpp  ecs_world.hpp  editor.hpp  entity.hpp  event.hpp  fae.hpp  imgui.hpp  input.hpp  light.hpp  lighting.hpp  logging.hpp  main.hpp  math.hpp  rendering.hpp  resource_manager.hpp  scheduler.hpp  sdl.hpp  time.hpp  ui.hpp  webgpu.hpp  windowing.hpp
include/fae/application/: application.hpp  application_step.hpp
include/fae/core/: api.hpp  byte.hpp  core.hpp  deleter.hpp  enum.hpp  exit.hpp  inocopy.hpp  inomove.hpp  match.hpp  offset_of.hpp  optional_reference.hpp  vector.hpp
include/fae/rendering/: material.hpp  mesh.hpp  meshes.hpp  model.hpp  render_pass.hpp  render_pipeline.hpp  renderer.hpp  rendering.hpp  sdl_renderer.hpp  texture.hpp  webgpu_renderer.hpp
include/fae/webgpu/: default_render_pipeline.hpp  include.hpp  sdl_impl.hpp  string_utils.hpp  utils.hpp  webgpu.hpp
src/: application.cpp  color.cpp  core.cpp  cursor.cpp  default_plugins.cpp  ecs_world.cpp  editor.cpp  entity.cpp  event.cpp  fae.cpp  imgui.cpp  input.cpp  lighting.cpp  logging.cpp  main.cpp  math.cpp  rendering.cpp  resource_manager.cpp  scheduler.cpp  sdl.cpp  time.cpp  ui.cpp  webgpu.cpp  windowing.cpp
src/application/: application.cpp
src/rendering/: mesh.cpp  meshes.cpp  rendering.cpp  sdL_renderer.cpp  texture.cpp  webgpu_renderer.cpp
src/webgpu/: default_render_pipeline.cpp  sdl_impl.cpp  string_utils.cpp  utils.cpp  webgpu.cpp
